--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
     <table border="10" class="t">
         <tr>
             <th>Deployed Projects</th>
-            <th> Links</th>
+            <th> Links : </th>
         </tr>
         <tr>
             
