--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <table border="10" class="t">
+    <table border="10" >
         <tr>
             <th>Deployed Projects</th>
             <th> Links : </th>
